# QT-Development-Guide

./: .gitignore  CMakeLists.txt  LICENSE  README.md
action_demo/: CMakeLists.txt  action.cpp  action.h  main.cpp  person.h
dialog_demo/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
file_system/: CMakeLists.txt  file_system.cpp  file_system.h  main.cpp
mvc_pattern/: CMakeLists.txt  controller.h  main.cpp  model.h  observer.h  view.h
string_list_model/: CMakeLists.txt  main.cpp  string_list_model_demo.cpp  string_list_model_demo.h
timer/: CMakeLists.txt  main.cpp  timer.cpp  timer.h
